Added longer timeouts for the alarm

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -11,6 +11,8 @@
         <item>30</item>
         <item>45</item>
         <item>60</item>
+        <item>120</item>
+        <item>180</item>
     </string-array>
     <string-array name="timeout_minutes_values" translatable="false" >
         <item>1</item>
@@ -23,6 +25,8 @@
         <item>30</item>
         <item>45</item>
         <item>60</item>
+        <item>120</item>
+        <item>180</item>
     </string-array>
 
     <string-array name="startup_action_entries">
